--- a/Inferential Statistics 8a.ipynb
+++ b/Inferential Statistics 8a.ipynb
@@ -1358,52 +1358,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.6448536269514722"
+       "-1.9599639845400545"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z = norm.ppf(0.95)\n",
+    "z = norm.ppf(0.025) #(1-0.95)/2\n",
     "z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "67.7405359070941"
+       "-1.162890934287654"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#can't find z score b/c the standard dev is too high?\n",
-    "#margin of error\n",
-    "\n",
-    "#Calculate the (95%) margin of error (use the exact critial z value to 2 decimal places - look this up or use norm.ppf())\n",
-    "#z = 1-(1 - 0.95/2) - 0.475 --> 0.1808\n",
-    "\n",
-    "#error = z * mean / sqrt(n)\n",
-    "\n",
-    "margin = (z * samp50mean) / standardev\n",
+    "margin = (z * standardev) / np.sqrt(50)\n",
     "margin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confidence interval:  171.61861992339115 , 173.94440179196644\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"confidence interval: \", (samp50mean + margin), \",\",  (samp50mean - margin))"
    ]
   },
   {
@@ -1445,30 +1454,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12.706204736432095"
+       "2.009575234489209"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t.ppf(0.975, df = 1)"
+    "t = t.ppf(0.975, df = 49)\n",
+    "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1923264102757953"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "margint = (t * standardev) / np.sqrt(50)\n",
+    "margint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confidence interval:  171.589184447403 , 173.9738372679546\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"confidence interval: \", (samp50mean - margint), \",\",  (samp50mean + margint))"
+   ]
   },
   {
    "cell_type": "markdown",
