--- a/inferential_statistics_1b-Q6.25.ipynb
+++ b/inferential_statistics_1b-Q6.25.ipynb
@@ -490,83 +490,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8821.421892306294, 6440.699841605233)"
+       "(8821.421892306294, 6446.510126811736)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x0_mean = np.mean(x0)\n",
-    "x0_std = np.std(x0)\n",
+    "x0_std = np.std(x0, ddof = 1)\n",
     "x0_n = len(x0)\n",
     "x0_mean, x0_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(16423.928276537663, 14036.956250260411)"
+       "(16423.928276537663, 14045.928418802127)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x1_mean = np.mean(x1)\n",
-    "x1_std = np.std(x1)\n",
+    "x1_std = np.std(x1, ddof = 1)\n",
     "x1_n = len(x1)\n",
     "x1_mean, x1_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11512.282899205744"
+       "11520.034268775256"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pooled_std = np.sqrt(((x0_n-1)*(x0_std ** 2) + (x1_n-1)*(x1_std**2))/(x0_n + x1_n - 2))\n",
+    "pooled_std = np.sqrt((((x0_n-1)*(x0_std ** 2)) + ((x1_n-1)*(x1_std**2)))/(x0_n + x1_n - 2))\n",
     "pooled_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-11.901306943555385"
+       "-11.89329903087671"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "Ttest_indResult(statistic=-11.893299030876712, pvalue=4.461230231620717e-31)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "1336"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,34 +637,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2.97831334e-10,            nan, 1.90223261e-12, ...,\n",
-       "        1.27572576e-03, 1.57199487e-32, 5.33662303e-02],\n",
-       "       [5.76343308e-10, 5.33662303e-02, 1.24849263e-13, ...,\n",
-       "        6.98619890e-03, 1.90842497e-31, 5.33662303e-02],\n",
-       "       [1.80972619e-12, 5.33662303e-02, 1.74617597e-13, ...,\n",
-       "        6.98619890e-03, 3.56893337e-32,            nan],\n",
-       "       ...,\n",
-       "       [5.76343308e-10,            nan, 3.45700818e-14, ...,\n",
-       "        6.98619890e-03, 2.22919973e-31, 5.33662303e-02],\n",
-       "       [8.47826744e-11,            nan, 5.59150597e-12, ...,\n",
-       "        1.27572576e-03, 1.31053948e-31,            nan],\n",
-       "       [1.51256041e-17,            nan, 1.07014380e-12, ...,\n",
-       "        5.33662303e-02, 1.38647137e-32, 5.33662303e-02]])"
+       "4.461230231620972e-31"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p_val = 2 * t.cdf(t_test, medical)\n",
+    "p_val = 2 * t.cdf(t_test, ddof)\n",
     "p_val\n",
     "#why is it giving me an array?"
    ]
